--- a/index.html
+++ b/index.html
@@ -81,10 +81,43 @@
         <a href="" class="p-4 px-8 rounded-full shadow-lg bg-lightBlue duration-200 hover:opacity-80">
           Download for Mac
         </a>
+      </div>
+    </div>
+  </section>
+  <!-- Snippets Section -->
+  <section id="snippets">
+    <div class="max-w-6xl mx-auto text-center my-20 px-10">
+      <h3 class="mb-8 text-4xl font-bold text-darkGrayishBlue md:text-5xl">
+        Keep track of your snippets
+      </h3>
 
+      <p class="max-w-3xl mx-auto mb-24 text-xl leading-9 text-center text-grayishBlue">
+        Clipboard Instantly stores any item you copy in the cloud,
+        meaning
+        you can access your snippets immediately ona ll your devices. Our
+        Mac and
+        iOs apps will help you organize everything
+      </p>
+
+    </div>
+
+  </section>
+  <!-- Features Section -->
+  <section id="features" class="">
+
+    <div class="max-w-6xl mx-auto text-center my-20 px-10">
+      <div class=" relative flex flex-col md:flex-row md:space-x-32">
+        <!-- Image -->
+        <div class="md:w-1/2">
+          <img src="./images/image-computer.png" alt="image" class="md:absolute top-0 right-[50%]" />
+        </div>
 
       </div>
     </div>
+
+
+
+
   </section>
 
 
