keep moving forward

--- a/index.html
+++ b/index.html
@@ -111,13 +111,53 @@
         <div class="md:w-1/2">
           <img src="./images/image-computer.png" alt="image" class="md:absolute top-0 right-[50%]" />
         </div>
+        <!-- item container -->
+        <div class="flex flex-col mt-16 mb-24 space-y-12 text-xl md:w-1/2 md:mb-60 md:text-left md:pl-16">
+          <!-- item 1 -->
+          <div>
+            <h5 class="mb-2 text-2xl font-bold text-darkGrayishBlue">Quick Search</h5>
+
+            <p class="max-w-md text-grayishBlue">
+              Easily Search your snippets by content, category,web address,application,and more
+            </p>
+          </div>
+          <!-- item 2 -->
+          <div>
+            <h5 class="mb-2 text-2xl font-bold text-darkGrayishBlue">Completely history</h5>
+
+            <p class="max-w-md text-grayishBlue">
+              Retrieve any snippets from the first moment you started using the app.
+            </p>
+          </div>
+
+          <!-- item 3 -->
+          <div>
+            <h5 class="mb-2 text-2xl font-bold text-darkGrayishBlue">iCloud Sync</h5>
+
+            <p class="max-w-md text-grayishBlue">
+              Instantly saves and syncs snippets across all your devices.
+            </p>
+          </div>
+
+        </div>
 
       </div>
     </div>
+  </section>
 
+  <!-- Access anywhere -->
+  <section id="access">
+    <div class="max-w-6xl mx-auto text-center my-20">
 
+      <h3 class="mb-8 text-4xl font-bold text-darkGrayishBlue md:text-5xl">Access Clipboard Anywhere</h3>
 
+      <p class="max-w-3xl mx-auto mb-24 text-xl leading-9 text-center text-grayishBlue">
 
+        Whether you're on the go, or at your computer,you can access all your Clipboard snippets in a few simple clicks.
+      </p>
+
+      <img class="mx-auto" src="images/image-devices.png" />
+    </div>
   </section>
 
 
