keep moving forward

--- a/index.html
+++ b/index.html
@@ -160,6 +160,54 @@
     </div>
   </section>
 
+  <!-- supercharge section -->
+
+
+  <section id="id">
+    <div class="max-w-6xl mx-auto text-center my-20">
+      <h3 class="mb-8 text-3xl font-bold text-darkGrayishBlue">Supercharge your workflow</h3>
+
+      <p class="max-w-3xl mx-auto mb-16 text-xl leading-9 text-center text-grayishBlue">
+        We've got the tools to boost your productivity.
+      </p>
+
+      <!-- Items Container -->
+
+      <div class="flex flex-col items-center justify-between space-y-16 md:flex-row md:space-y-0 md:space-x-12">
+        <!-- item 1 -->
+        <div class="flex mx-auto flex-col items-center space-y-5">
+          <img src="images/icon-blacklist.svg" alt="alt" class="mb-6" />
+          <h5>Create Blacklists</h5>
+          <p class="max-w-md text-grayishBlue">
+            Easily search your snippets by content, category,web
+            address,
+            application,and more.
+          </p>
+        </div>
+
+        <!-- item 2 -->
+
+        <div class="flex mx-auto flex-col items-center space-y-5">
+          <img src="images/icon-text.svg" alt="alt" class="mb-6" />
+          <h5>Plain Text Snippets</h5>
+          <p class="max-w-md text-grayishBlue">
+            Remove unwanted formatting from copied text for a consistent look.
+          </p>
+        </div>
+
+        <!-- item -3 -->
+
+        <div class="flex mx-auto flex-col items-center space-y-5">
+          <img src="images/icon-preview.svg" alt="alt" class="mb-6" />
+          <h5>Sneak Preview</h5>
+          <p class="max-w-md text-grayishBlue">
+            Quick preview of all snippets on your Clipboard for easy access.
+          </p>
+        </div>
+      </div>
+    </div>
+
+  </section>
 
 </body>
 
