--- a/index.html
+++ b/index.html
@@ -209,6 +209,105 @@
 
   </section>
 
+  <!-- References Section  -->
+
+  <section id="references">
+
+    <div
+      class="flex flex-col items-center justify-between max-w-6xl px-10 mx-auto space-y-16 my-44 md:flex-row md:space-y-0">
+      <img src="/images/logo-google.png" />
+      <img src="/images/logo-ibm.png" />
+      <img src="/images/logo-microsoft.png" />
+      <img src="/images/logo-hp.png" />
+      <img src="/images/logo-vector-graphics.png" />
+    </div>
+
+  </section>
+
+  <!-- Bottom CTA section -->
+
+  <section id="bottom">
+    <div class="section-container my-20">
+      <h3>
+        Clipboard for i0S and Mac0S
+      </h3>
+      <p class="section-content mb-10">
+        Availble for free on the App Store. Download for Mac or iOS,sync
+        with iCloud and you're ready to start adding to your clipboard
+      </p>
+
+      <!-- button  container-->
+
+      <div class="button-container">
+        <a href="" class="p-4 px-8 rounded-full shadow-lg bg-strongCyan duration-200 hover:opacity-80">
+          Download for i0S
+        </a>
+
+        <a href="" class="p-4 px-8 rounded-full shadow-lg bg-lightBlue duration-200 hover:opacity-80">
+          Download for Mac
+        </a>
+
+      </div>
+
+    </div>
+  </section>
+
+  <footer class="bg-gray-50">
+    <div class="section-container">
+      <div class="flex flex-col items-center justify-between md:flex-row">
+        <!-- Image -->
+        <img src="images/logo.svg" alt="" class="scale-50" />
+
+        <!-- container for menus and social -->
+
+        <div
+          class="flex flex-col items-center justify-between flex-1 mb-10 space-y-6 md:flex-row mb:mb-0 md:space-y-0 text-grayishBlue">
+
+          <!-- Menus -->
+          <div class="flex flex-col space-y-4 md:flex-row md:ml-24 md:space-x-24 md:space-y-0">
+            <!-- Menu 1 -->
+            <div class="flex flex-col space-y-4 text-center md:text-left">
+              <div> <a href="" class="hover:text-strongCyan">
+                  FAQs
+                </a></div>
+
+              <div> <a href="" class="hover:text-strongCyan">
+                  Contact Us
+                </a></div>
+            </div>
+            <!-- Menu 2 -->
+            <div class="flex flex-col space-y-4 text-center md:text-left">
+              <div> <a href="" class="hover:text-strongCyan">
+                  Privacy
+                </a></div>
+
+              <div> <a href="" class="hover:text-strongCyan">
+                  Press Kit
+                </a></div>
+            </div>
+
+            <!-- Menu 3 -->
+            <div class="flex flex-col space-y-4 text-center md:text-left">
+              <div> <a href="" class="hover:text-strongCyan">
+                  Install Guide
+                </a></div>
+            </div>
+          </div>
+
+        </div>
+        <!-- socials -->
+
+        <div class="flex justify-between w-32 py-1">
+          <a href="#"><img src="images/icon-facebook.svg" alt="" class="duration-200 ficon"></a>
+
+          <a href="#"><img src="images/icon-twitter.svg" alt="" class="duration-200 ficon"></a>
+
+          <a href="#"><img src="images/icon-instagram.svg" alt="" class="duration-200 ficon"></a>
+        </div>
+      </div>
+    </div>
+  </footer>
+
 </body>
 
 </html>
